fix: shift pagination link to the right of the window

--- a/assets/css/src/components/posts.css
+++ b/assets/css/src/components/posts.css
@@ -115,3 +115,7 @@
         max-height: 300px;
     }
 }
+
+.pagination .older-posts {
+    float: right;
+}
